fixed text overflow

--- a/src/styles/Tiles.css
+++ b/src/styles/Tiles.css
@@ -1,3 +1,28 @@
+.tileHeader {
+  width: 100%;
+  height: 56px;
+  display: grid;
+  background: rgb(232, 232, 232);
+  grid-template-columns: auto 100px;
+  grid-template-rows: 56px;
+  grid-row-gap: 10px;
+  padding: 0 0 0 10px;
+  grid-template-areas: "title buttons";
+}
+
+.tileHeader .tileTitle {
+  grid-area: title;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color: rgba(0, 0, 0, 0.4);
+  line-height: 56px;
+  font-size: 20px;
+}
+.tileHeader .tileHeaderButtons {
+  grid-area: buttons;
+}
+
 .readOnlyBooleanTile,
 .readOnlyColourTile,
 .readWriteBooleanTile {
